fixed mobile view

--- a/headstart.html
+++ b/headstart.html
@@ -95,7 +95,7 @@
           <div class="col-md-12 blog-content">
             <div class="row mb-5">
               <div class="col-lg-12">
-                <figure><img src="images/events/headstart.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid">
+                <figure style="padding-top:80px"><img src="images/events/headstart.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid">
                   <figcaption></figcaption></figure>
               </div>
             </div>
@@ -291,7 +291,7 @@ too!</b></p>
         </div>
         <div class="row">
           <div class="col-lg-4 mb-5" data-aos="fade-up" data-aos-delay="">
-            <figure class="circle-bg">
+            <figure>
               <img src="images/headstart/nikhilesh.jpg" alt="Image" class="img-fluid">
             </figure>
           </div>
